# serdoc

./: README.md  cabal.project
.github/workflows/: ci.yml
serdoc-binary/: CHANGELOG.md  LICENSE  README.md  serdoc-binary.cabal
serdoc-binary/src/Data/SerDoc/: Binary.hs
serdoc-binary/src/Data/SerDoc/Binary/: Codec.hs  TH.hs
serdoc-binary/test/: Main.hs
serdoc-binary/test/Data/SerDoc/Binary/Test/: Codec.hs
serdoc-core/: CHANGELOG.md  LICENSE  README.md  serdoc-core.cabal
serdoc-core/src/Data/SerDoc/: Class.hs  Info.hs  TH.hs  TestUtil.hs
serdoc-core/test/: Main.hs
serdoc-core/test/Data/SerDoc/Test/: Class.hs  Info.hs
