cabal-version:      3.0
name:               serdoc-core
version:            0.1.0.0
synopsis:           Generated documentation of serialization formats
description:        A set of typeclasses, primitives, combinators, and TH
                    utilities for documenting serialization formats in a mostly
                    automatic fashion.
license:            Apache-2.0
license-file:       LICENSE
author:             Tobias Dammers
maintainer:         tobias@well-typed.com
copyright:          2023 IO Global
category:           Data
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: Data.SerDoc.Class
                   , Data.SerDoc.Info
                   , Data.SerDoc.TestUtil
    build-depends: base ^>=4.17.0.0
                 , bytestring >=0.12.0.2 && <0.13
                 , containers >=0.6 && <0.8
                 , mtl >=2.3.1 && <2.4
                 , tasty >=1.5 && <1.6
                 , tasty-quickcheck >=0.10.3 && <0.11
                 , text >=2.1 && <2.2
                 , time >=1.12 && <1.14
                 , template-haskell >=2.19 && <2.20
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite serdoc-test
    import:           warnings
    default-language: Haskell2010
    other-modules: Data.SerDoc.Test.Class
                 , Data.SerDoc.Test.Info
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends: base ^>=4.17.0.0
                 , serdoc-core
                 , bytestring >=0.12.0.2 && <0.13
                 , mtl >=2.3.1 && <2.4
                 , tasty >=1.5 && <1.6
                 , tasty-quickcheck >=0.10.3 && <0.11
                 , text >=2.1 && <2.2
                 , time >=1.12 && <1.14
